FID-44260 added class to resolve default temp directory (#536)